@@ -18,20 +18,23 @@ module      = bat.prerun
 method      = searchXML
 priority    = 100
 description = Check XML validity
+enabled     = yes
 
-#[verifybz2]
-#type        = prerun
-#module      = bat.prerun
-#method      = verifyBZ2
-#priority    = 1
-#description = Check if complete file is a valid bzip2 file
+[verifybz2]
+type        = prerun
+module      = bat.prerun
+method      = verifyBZ2
+priority    = 1
+description = Check if complete file is a valid bzip2 file
+enabled     = no
 
-#[verifygzip]
-#type        = prerun
-#module      = bat.prerun
-#method      = verifyGzip
-#priority    = 1
-#description = Check if complete file is a valid gzip file
+[verifygzip]
+type        = prerun
+module      = bat.prerun
+method      = verifyGzip
+priority    = 1
+description = Check if complete file is a valid gzip file
+enabled     = no
 
 [verifyandroiddex]
 type        = prerun
@@ -39,6 +42,7 @@ module      = bat.prerun
 method      = verifyAndroidDex
 priority    = 1
 description = Check if file is an Android binary XML file
+enabled     = yes
 
 [verifyandroidxml]
 type        = prerun
@@ -46,6 +50,7 @@ module      = bat.prerun
 method      = verifyAndroidXML
 priority    = 1
 description = Check if file is an Android binary XML file
+enabled     = yes
 
 [verifymp4]
 type        = prerun
@@ -53,6 +58,7 @@ module      = bat.prerun
 method      = verifyMP4
 priority    = 1
 description = Check if file is a valid MP4 file
+enabled     = yes
 
 [verifyogg]
 type        = prerun
@@ -61,6 +67,7 @@ method      = verifyOgg
 priority    = 1
 magic       = ogg
 description = Check if file is a valid Ogg file
+enabled     = yes
 
 [verifytext]
 type        = prerun
@@ -68,6 +75,7 @@ module      = bat.prerun
 method      = verifyText
 priority    = 3
 description = Check if file contains just ASCII text
+enabled     = yes
 
 [verifyttf]
 type        = prerun
@@ -75,6 +83,7 @@ module      = bat.prerun
 method      = verifyTTF
 priority    = 1
 description = Check if file contains a single TTF font
+enabled     = yes
 
 [verifygraphics]
 type        = prerun
@@ -83,6 +92,7 @@ method      = verifyGraphics
 magic       = bmp:jpeg:jpegtrailer:gif87:gif89:png:pngtrailer
 priority    = 2
 description = Check if file is a valid graphics file, or consists of just graphics files
+enabled     = yes
 
 ####################
 ### unpack scans ###
@@ -96,6 +106,7 @@ priority    = 1
 magic       = 7z
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack 7z compressed files
+enabled     = yes
 
 [ar]
 type        = unpack
@@ -105,15 +116,17 @@ priority    = 2
 magic       = ar
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack ar archives
+enabled     = yes
 
-#[arj]
-#type        = unpack
-#module      = bat.fwunpack
-#method      = searchUnpackARJ
-#priority    = 1
-#magic       = arj
-#noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
-#description = Unpack ARJ compressed files
+[arj]
+type        = unpack
+module      = bat.fwunpack
+method      = searchUnpackARJ
+priority    = 1
+magic       = arj
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
+description = Unpack ARJ compressed files
+enabled     = no
 
 [base64]
 type        = unpack
@@ -122,6 +135,7 @@ method      = searchUnpackBase64
 priority    = 0
 noscan      = xml:graphics:binary:pdf:compressed:audio:video
 description = Decode base64 encoded files
+enabled     = yes
 
 [byteswap]
 type        = unpack
@@ -130,6 +144,7 @@ method      = searchUnpackByteSwap
 priority    = 100
 noscan      = xml:graphics:pdf:compressed:audio:video
 description = Byteswap files for 16 bit flash
+enabled     = yes
 
 [bzip2]
 type        = unpack
@@ -139,6 +154,7 @@ priority    = 1
 magic       = bz2
 noscan      = text:xml:graphics:pdf:gzip:lrzip:audio:video
 description = Unpack bzip2 compressed files
+enabled     = yes
 
 [cab]
 type        = unpack
@@ -148,6 +164,7 @@ priority    = 1
 magic       = cab
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack MS Windows Cabinet archives
+enabled     = yes
 
 [compress]
 type        = unpack
@@ -157,6 +174,7 @@ priority    = 1
 magic       = compress
 noscan      = text:xml:graphics:pdf:audio:video
 description = Unpack files compressed with compress
+enabled     = yes
 
 [cpio]
 type        = unpack
@@ -166,6 +184,7 @@ priority    = 2
 magic       = cpio1:cpio2:cpio3:cpiotrailer
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack CPIO archives
+enabled     = yes
 
 [cramfs]
 type        = unpack
@@ -175,6 +194,7 @@ priority    = 3
 magic       = cramfs
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack cramfs file systems
+enabled     = yes
 
 [exe]
 type        = unpack
@@ -183,6 +203,7 @@ method      = searchUnpackExe
 priority    = 2
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack Microsoft Windows Executable files
+enabled     = yes
 
 [ext2fs]
 type        = unpack
@@ -192,6 +213,7 @@ priority    = 3
 magic       = ext2
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack EXT2/3/4 file systems
+enabled     = yes
 
 [gif]
 type        = unpack
@@ -201,6 +223,7 @@ priority    = 0
 magic       = gif87:gif89
 noscan      = text:xml:graphics:pdf:compressed:resource:audio
 description = Carve GIF files from a file
+enabled     = yes
 
 [gzip]
 type        = unpack
@@ -210,15 +233,17 @@ priority    = 1
 magic       = gzip
 noscan      = text:xml:graphics:pdf:bz2:lrzip:audio:video
 description = Unpack gzip compressed files
+enabled     = yes
 
-#[ico]
-#type        = unpack
-#module      = bat.fwunpack
-#method      = searchUnpackIco
-#priority    = 0
-#magic       = ico
-#noscan      = text:xml:pdf:compressed:graphics:resource:audio:video
-#description = Carve ICO files from a file
+[ico]
+type        = unpack
+module      = bat.fwunpack
+method      = searchUnpackIco
+priority    = 0
+magic       = ico
+noscan      = text:xml:pdf:compressed:graphics:resource:audio:video
+description = Carve ICO files from a file
+enabled     = no
 
 [installshield]
 type        = unpack
@@ -228,6 +253,7 @@ priority    = 1
 magic       = installshield
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack InstallShield compressed files
+enabled     = yes
 
 [iso9660]
 type        = unpack
@@ -237,6 +263,7 @@ priority    = 4
 magic       = iso9660
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack ISO9660 (CD-ROM) file systems
+enabled     = yes
 
 [java_serialized]
 type        = unpack
@@ -246,6 +273,7 @@ priority    = 2
 magic       = java_serialized
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack Java serialized files
+enabled     = yes
 
 [jffs2]
 type        = unpack
@@ -255,6 +283,7 @@ priority    = 1
 magic       = jffs2_le
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack JFFS2 file systems
+enabled     = yes
 
 [lrzip]
 type        = unpack
@@ -264,6 +293,7 @@ priority    = 1
 magic       = lrzip
 noscan      = text:xml:graphics:pdf:bz2:gzip:lzip:audio:video
 description = Unpack LRZIP compressed files
+enabled     = yes
 
 [lzip]
 type        = unpack
@@ -273,6 +303,7 @@ priority    = 1
 magic       = lzip
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack LZIP compressed files
+enabled     = yes
 
 [lzma]
 type        = unpack
@@ -282,6 +313,7 @@ priority    = 1
 magic       = lzma_alone:lzma_alone_alt
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:resource:dalvik:audio:video
 description = Unpack LZMA compressed files
+enabled     = yes
 
 [lzo]
 type        = unpack
@@ -291,6 +323,7 @@ priority    = 1
 magic       = lzo
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack LZO compressed files
+enabled     = yes
 
 [pdf_unpack]
 type        = unpack
@@ -300,6 +333,7 @@ priority    = 10
 magic       = pdf:pdftrailer
 noscan      = text:xml:graphics:compressed:audio:video
 description = Carve PDF files from a file
+enabled     = yes
 
 [png]
 type        = unpack
@@ -309,6 +343,7 @@ priority    = 0
 magic       = png:pngtrailer
 noscan      = text:xml:pdf:compressed:graphics:resource:audio
 description = Carve PNG files from a file
+enabled     = yes
 
 [rar]
 type        = unpack
@@ -318,6 +353,7 @@ priority    = 1
 magic       = rar
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack RAR archives
+enabled     = yes
 
 [romfs]
 type        = unpack
@@ -327,6 +363,7 @@ priority    = 1
 magic       = romfs
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack romfs file systems
+enabled     = yes
 
 [rpm]
 type        = unpack
@@ -336,6 +373,7 @@ priority    = 2
 magic       = rpm:gzip:xz:xztrailer
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack RPM files
+enabled     = yes
 
 [squashfs]
 type        = unpack
@@ -345,6 +383,7 @@ priority    = 1
 magic       = squashfs1:squashfs2:squashfs3:squashfs4:squashfs5:squashfs6
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack squashfs file systmes
+enabled     = yes
 
 [swf]
 type        = unpack
@@ -354,6 +393,7 @@ priority    = 0
 magic       = swf
 noscan      = text:xml:pdf:compressed:graphics:resource:audio:video
 description = Unpack compressed Shockwave Flash files
+enabled     = yes
 
 [tar]
 type        = unpack
@@ -363,15 +403,17 @@ priority    = 3
 magic       = tar1:tar2
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack tar archives
+enabled     = yes
 
-#[ubifs]
-#type        = unpack
-#module      = bat.fwunpack
-#method      = searchUnpackUbifs
-#priority    = 3
-#magic       = ubifs
-#noscan      = text:xml:graphics:pdf:compressed:audio:video
-#description = Unpack UBI file systems
+[ubifs]
+type        = unpack
+module      = bat.fwunpack
+method      = searchUnpackUbifs
+priority    = 3
+magic       = ubifs
+noscan      = text:xml:graphics:pdf:compressed:audio:video
+description = Unpack UBI file systems
+enabled     = no
 
 [upx]
 type        = unpack
@@ -380,6 +422,7 @@ method      = searchUnpackUPX
 priority    = 3
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack UPX compressed executables
+enabled     = yes
 
 [xz]
 type        = unpack
@@ -389,6 +432,7 @@ priority    = 1
 magic       = xz:xztrailer
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack XZ compressed files
+enabled     = yes
 
 [yaffs2]
 type        = unpack
@@ -397,6 +441,7 @@ method      = searchUnpackYaffs2
 priority    = 2
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack YAFFS2 file systems
+enabled     = yes
 
 [zip]
 type        = unpack
@@ -406,6 +451,7 @@ priority    = 1
 magic       = zip
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack ZIP compressed files
+enabled     = yes
 
 ##################
 ### leaf scans ###
@@ -417,6 +463,7 @@ module      = bat.checks
 method      = scanArchitecture
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Scan executable file architecture
+enabled     = yes
 
 [busybox-version]
 type        = program
@@ -424,6 +471,7 @@ module      = bat.busyboxversion
 method      = busybox_version
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Extract BusyBox version number
+enabled     = yes
 
 [dproxy]
 type        = program
@@ -431,6 +479,7 @@ module      = bat.checks
 method      = searchDproxy
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of dproxy
+enabled     = yes
 
 [ez-ipupdate]
 type        = program
@@ -438,13 +487,16 @@ module      = bat.checks
 method      = searchEzIpupdate
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of ez-update
+enabled     = yes
 
-#[file2package]
-#type    = program
-#module  = bat.file2package
-#method  = filename2package
-#xmloutput = xmlprettyprint
-#envvars = BAT_PACKAGE_DB=/tmp/filepackages
+[file2package]
+type        = program
+module      = bat.file2package
+method      = filename2package
+xmloutput   = xmlprettyprint
+envvars     = BAT_PACKAGE_DB=/tmp/filepackages
+description = Look up name of file name in popular distributions
+enabled     = no
 
 [forges]
 type        = program
@@ -453,6 +505,7 @@ method      = scanForges
 xmloutput   = forgesPrettyPrint
 noscan      = graphics:compressed:audio:video
 description = Scan for presence of markers of forges/collaborative software development sites
+enabled     = yes
 
 [iproute]
 type        = program
@@ -460,6 +513,7 @@ module      = bat.checks
 method      = searchIproute
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of iproute
+enabled     = yes
 
 [iptables]
 type        = program
@@ -467,13 +521,16 @@ module      = bat.checks
 method      = searchIptables
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of iptables
+enabled     = yes
 
 [kernelchecks]
-type    = program
-module  = bat.kernelanalysis
-method  = kernelChecks
-xmloutput = xmlprettyprint
-noscan  = text:xml:graphics:pdf:compressed:audio:video
+type        = program
+module      = bat.kernelanalysis
+method      = kernelChecks
+xmloutput   = xmlprettyprint
+noscan      = text:xml:graphics:pdf:compressed:audio:video
+description = Detect version number and some subsystems in Linux kernel
+enabled     = yes
 
 [kernelmodulelicense]
 type        = program
@@ -481,6 +538,7 @@ module      = bat.kernelanalysis
 method      = analyseModuleLicense
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine declared Linux kernel module license
+enabled     = yes
 
 [libs]
 type        = program
@@ -489,6 +547,7 @@ method      = searchDynamicLibs
 xmloutput   = dynamicLibsPrettyPrint
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine dynamically linked libraries
+enabled     = yes
 
 [libusb]
 type        = program
@@ -496,6 +555,7 @@ module      = bat.checks
 method      = searchLibusb
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of libusb
+enabled     = yes
 
 [licenses]
 type        = program
@@ -504,6 +564,7 @@ method      = scanLicenses
 xmloutput   = licensesPrettyPrint
 noscan      = compressed
 description = Scan for presence of license markers
+enabled     = yes
 
 [loadlin]
 type        = program
@@ -511,21 +572,26 @@ module      = bat.checks
 method      = searchLoadLin
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of libusb
+enabled     = yes
 
 [pdf]
-type    = program
-module  = bat.checks
-method  = scanPDF
-xmloutput = pdfPrettyPrint
-noscan  = text:xml:graphics:compressed:audio:video
+type        = program
+module      = bat.checks
+method      = scanPDF
+xmloutput   = pdfPrettyPrint
+noscan      = text:xml:graphics:compressed:audio:video
+description = Determine characteristics of PDF files
+enabled     = yes
 
-#[ranking]
-#type    = program
-#module  = bat.ranking
-#method  = searchGeneric
-#xmloutput = xmlprettyprint
-#envvars = BAT_SQLITE_AVG_C=/home/armijn/master/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master/stringscache_c:BAT_SQLITE_DB=/home/armijn/master/master:BAT_RANKING_FULLCACHE=1:BAT_RANKING_LICENSE=1
-#noscan  = text:xml:graphics:pdf:compressed:resource:audio:video
+[ranking]
+type        = program
+module      = bat.ranking
+method      = searchGeneric
+xmloutput   = xmlprettyprint
+envvars     = BAT_SQLITE_AVG_C=/home/armijn/master/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master/stringscache_c:BAT_SQLITE_DB=/home/armijn/master/master:BAT_RANKING_FULLCACHE=1:BAT_RANKING_LICENSE=1
+noscan      = text:xml:graphics:pdf:compressed:resource:audio:video
+description = Classify packages using advanced ranking mechanism
+enabled     = no
 
 [redboot]
 type        = program
@@ -533,6 +599,7 @@ module      = bat.checks
 method      = searchRedBoot
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of RedBoot
+enabled     = yes
 
 [uboot]
 type        = program
@@ -540,6 +607,7 @@ module      = bat.checks
 method      = searchUBoot
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of U-Boot
+enabled     = yes
 
 [vsftpd]
 type        = program
@@ -547,6 +615,7 @@ module      = bat.checks
 method      = searchVsftpd
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of vsftpd
+enabled     = yes
 
 [wireless-tools]
 type        = program
@@ -554,6 +623,7 @@ module      = bat.checks
 method      = searchWirelessTools
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of wireless-tools
+enabled     = yes
 
 [wpa-supplicant]
 type        = program
@@ -561,6 +631,7 @@ module      = bat.checks
 method      = searchWpaSupplicant
 noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Determine presence of wpa-supplicant
+enabled     = yes
 
 #####################
 ### postrun scans ###
